[package]
name = "nodb"
version = "0.1.0"
authors = ["Rhelvetican <bionicvnb@gmail.com>"]
license = "MIT"
repository = "https://github.com/Rhelvetican/nodb"
homepage = "https://github.com/Rhelvetican/nodb"
readme = "README.md"
description = "A lightweight and simple key-value store written in Rust."
keywords = ["database", "key-value-store", "db", "kv", "nosql"]
categories = ["database-implementations", "data-structures"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_cbor = "0.11"
bincode = "1"
anyhow = "1"

[dev-dependencies]
rand = "0.8"

[[example]]
name = "simple_db"
path = "examples/simple_db/src/main.rs"

[[example]]
name = "load_db"
path = "examples/load_db/src/main.rs"
